--- a/templates/base.html
+++ b/templates/base.html
@@ -7,22 +7,9 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta content="#ffffff" name="theme-color" />
   <meta content="#da532c" name="msapplication-TileColor" />
-
-  {% if config.extra.favicon.webmanifest %}
-  <link href='{{ config.extra.favicon.webmanifest }}' rel="manifest" />
-  {% endif %}
-  {% if config.extra.favicon.safari_pinned_tab %}
-  <link color="#5bbad5" href='{{ config.extra.favicon.safari_pinned_tab }}' rel="mask-icon" />
-  {% endif %}
-  {% if config.extra.favicon.favicon_16x16 %}
-  <link href='{{ config.extra.favicon.favicon_16x16 }}' rel="icon" sizes="16x16" type="image/png" />
-  {% endif %}
-  {% if config.extra.favicon.favicon_32x32 %}
-  <link href='{{ config.extra.favicon.favicon_32x32 }}' rel="icon" sizes="32x32" type="image/png" />
-  {% endif %}
-  {% if config.extra.favicon.apple_touch_icon %}
-  <link href='{{ config.extra.favicon.apple_touch_icon }}' rel="apple-touch-icon" sizes="180x180" />
-  {% endif %}
+  
+  <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg">
+  <link rel="alternate icon" href="/icons/favicon.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.6.1/themes/folio/galleria.folio.min.css"
@@ -59,7 +46,7 @@
   <nav aria-label="section navigation" class="navbar is-light" role="navigation">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item has-text-weight-bold" href="/">{{ config.title }}</a>
+        <a class="navbar-item has-text-weight-bold" href="{{config.base_url}}">{{ config.title }}</a>
         <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="navMenu" role="button">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -128,7 +115,7 @@
           Previous
         </a>
         <a class="pagination-next" href='{{ paginator.next }}' {% if not paginator.next %}disabled{% endif %}>
-          Next page
+          Next
           <span class="icon">
             <i class="fas fa-angle-double-right"></i>
           </span>
@@ -137,7 +124,7 @@
           {% for pager in range(start=1, end=paginator.number_pagers+1) %}
           <li>
             <a class="pagination-link {% if paginator.current_index == pager %}is-current{% endif %}"
-              href='{{ paginator.base_url }}{{pager}}'
+              href='{% if pager == 1 %}{{ section.permalink }}{% else %}{{ paginator.base_url }}{{pager}}{% endif %}'
               aria-label="Goto page {{pager}}">
               {{pager}}
             </a>
@@ -168,9 +155,10 @@
       <span class="icon is-small">
         <i class="fas fa-power-off fa-xs"></i>
       </span>
-      Zola
+      <a rel="noopener nofollow noreferrer" target="_blank" href="https://github.com/getzola/zola">Zola</a> with <a rel="noopener nofollow noreferrer" target="_blank" href="https://github.com/RatanShreshtha/DeepThought">DeepThought</a>
     </p>
   </footer>
+  {% if page %}{% include "scroll.html" %}{% endif %}
   {% endblock %}
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -181,9 +169,12 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.6.1/themes/folio/galleria.folio.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/elasticlunr/0.9.6/elasticlunr.min.js"></script>
-  <script src='{{ get_url(path='search_index.en.js') }}'></script>
-  <script src='{{ get_url(path='js/site.js') }}'></script>
+  <script src="/js/site.js"></script>
 
+  <script src="/search_index.{{ config.default_language }}.js"></script>
+  {% if page %}<script src="/js/scroll.js"></script>{% endif %}
+
+  <!-- block 的用法: 父模版定义block，子模版中重写 -->
   {% block custom_js %}
   {% endblock %}
 </body>
