--- a/templates/page.html
+++ b/templates/page.html
@@ -2,16 +2,18 @@
 
 {% block title %}
 {{ config.title }} | {{ page.title }}
-{% endblock %} 
+{% endblock %}
 
 {% block content %}
 <section class="section">
   <div class="container">
     <div class="columns">
       <div class="column is-8 is-offset-2">
-        <article>
-          <h1 class="title">{{ page.title }}</h1>
-          <h2 class="subtitle">{{ page.description }}</h2>
+        <article class="box">
+          <h1 class="title is-1">
+            {{ page.title }}
+          </h1>
+          <p class="subtitle">{{ page.description }}</p>
           <div class="columns is-multiline is-gapless">
             <div class="column is-8">
               {{ macros::page_publish_metadata(page=page) }}
@@ -19,39 +21,51 @@
             <div class="column is-4 has-text-right-desktop">
               {{ macros::page_content_metadata(page=page) }}
             </div>
-            <div class="column is-4">
-              {% if page.taxonomies.categories %} {{
-              macros::render_categories(categories=page.taxonomies.categories)
-              }} {% endif %}
+            <div class="column is-8">
+              {% if page.updated %}
+              <p class="has-text-grey">
+                <span class="icon">
+                  <i class="fa fa-refresh"></i>
+                </span>
+                last updated on
+                <time datetime='{{ page.updated }}'>{{ page.updated | date(format='%B %d, %Y') }}</time>
+              </p>
+              {% endif %}
             </div>
-            <div class="column is-8 has-text-right-desktop">
-              {% if page.taxonomies.tags %} {{
-              macros::render_tags(tags=page.taxonomies.tags) }} {% endif %}
+            <div class="column is-4 has-text-right-desktop">
             </div>
           </div>
-          <div class="content">
+          <div class="content mt-2">
             {{ page.content | safe }}
           </div>
-          <div class="container has-text-centered">
-            {{ macros::page_share_links(page=page) }}
+          <div class="columns is-multiline is-gapless">
+            <div class="column">
+              {% if page.taxonomies.categories %}
+              {{ macros::render_categories(categories=page.taxonomies.categories) }}
+              {% endif %}
+            </div>
+            <div class="column has-text-right-desktop">
+              {% if page.taxonomies.tags %}
+              {{ macros::render_tags(tags=page.taxonomies.tags) }}
+              {% endif %}
+            </div>
           </div>
         </article>
       </div>
       {% if page.extra.toc %}
       <div class="column is-2 is-hidden-mobile">
-        <aside class="menu" style="position: fixed">
-          <p class="heading has-text-weight-bold">Contents</p>
+        <aside class="menu" style="position: sticky; top: 48px">
           <ul class="menu-list">
             {% for h1 in page.toc %}
             <li>
-              <a class="is-size-7" href="{{ h1.permalink | safe }}">
+              <a id="link-{{h1.id}}" class="toc is-size-7 {% if loop.first %}is-active{% endif %}" href="{{ h1.permalink | safe }}">
                 {{ h1.title }}
               </a>
               {% if h1.children %}
               <ul>
                 {% for h2 in h1.children %}
                 <li>
-                  <a class="is-size-7" href="{{ h2.permalink | safe }}">
+                  <a id="link-{{h2.id}}" class="toc is-size-7" href="{{ h2.permalink | safe }}">
                     {{ h2.title }}
                   </a>
                 </li>
@@ -67,7 +81,7 @@
     </div>
   </div>
 </section>
-{% endblock %} 
+{% endblock %}
 
 {% block pagination %}
 {% if page.earlier or page.later or page.lighter or page.heavier %}
@@ -78,10 +92,7 @@
         <nav class="level">
           {% if page.later %}
           <div class="level-item has-text-centered">
-            <a
-              class="button is-black is-outlined"
-              href="{{ page.later.permalink }}"
-            >
+            <a class="button is-black is-outlined" href="{{ page.later.permalink }}">
               <span class="icon mr-2">
                 <i class="fas fa-arrow-circle-left"></i>
               </span>
@@ -90,10 +101,7 @@
           </div>
           {% endif %} {% if page.earlier %}
           <div class="level-item has-text-centered">
-            <a
-              class="button is-black is-outlined"
-              href="{{ page.earlier.permalink }}"
-            >
+            <a class="button is-black is-outlined" href="{{ page.earlier.permalink }}">
               {{ page.earlier.title }}<span class="icon ml-2">
                 <i class="fas fa-arrow-circle-right"></i>
               </span>
@@ -101,10 +109,7 @@
           </div>
           {% endif %} {% if page.heavier %}
           <div class="level-item has-text-centered">
-            <a
-              class="button is-black is-outlined"
-              href="{{ page.heavier.permalink }}"
-            >
+            <a class="button is-black is-outlined" href="{{ page.heavier.permalink }}">
               <span class="icon mr-2">
                 <i class="fas fa-arrow-circle-left"></i>
               </span>
@@ -113,10 +118,7 @@
           </div>
           {% endif %} {% if page.lighter %}
           <div class="level-item has-text-centered">
-            <a
-              class="button is-black is-outlined"
-              href="{{ page.lighter.permalink }}"
-            >
+            <a class="button is-black is-outlined" href="{{ page.lighter.permalink }}">
               {{ page.lighter.title }}<span class="icon ml-2">
                 <i class="fas fa-arrow-circle-right"></i>
               </span>
@@ -128,10 +130,10 @@
     </div>
   </div>
 </section>
-{% endif %} 
-{% endblock %} 
+{% endif %}
+{% endblock %}
 
-{% block comment %} 
+{% block comment %}
 {% if page.extra.comments and config.extra.commenting.hyvor %}
 <section class="section">
   <div class="container">
@@ -142,19 +144,52 @@
     </div>
   </div>
 </section>
-{% endif %} {% endblock %} {% block custom_js %} {% if page.extra.comments and
-config.extra.commenting.hyvor %}
+{% endif %}
+{% endblock %}
+
+{% block custom_js %}
+{% if page.extra.toc %}
 <script type="text/javascript">
-  var HYVOR_TALK_WEBSITE = {{ config.extra.commenting.hyvor }};
-  var HYVOR_TALK_CONFIG = {
-    url: window.location.href,
-    id: window.btoa(encodeURIComponent(escape(window.location.href)))
-  };
+  const menuBarHeight = $("nav.navbar").height();
+  const tocItems = $('.toc');
+  const navSections = new Array($('.toc').length);
+
+  tocItems.each(function (i) {
+    let id = $(this).attr("id").substring(5);
+    navSections[i] = document.getElementById(id);
+  })
+
+  function isVisible(tocIndex) {
+    const current = navSections[tocIndex];
+    const next = tocIndex < tocItems.length - 1 ? navSections[tocIndex+1] : $("section.section").get(1);
+    
+    const c = current.getBoundingClientRect();
+    const n = next.getBoundingClientRect();
+    const h = (window.innerHeight || document.documentElement.clientHeight);
+
+    return (c.top <= h) && (c.top + (n.top - c.top) - menuBarHeight >= 0);
+  }
+
+  function activateIfVisible() {
+    for (b = true, i = 0; i < tocItems.length; i++) {
+      if (b && isVisible(i)) {
+        tocItems[i].classList.add('is-active');
+        b = false;
+      } else
+        tocItems[i].classList.remove('is-active');
+    }
+  }
+
+  var isTicking = null;
+  window.addEventListener('scroll', () => {
+    if (!isTicking) {
+      window.requestAnimationFrame(() => {
+        activateIfVisible();
+        isTicking = false;
+      });
+      isTicking = true;
+    }
+  }, false);
 </script>
-<script
-  async
-  src="//talk.hyvor.com/web-api/embed"
-  type="text/javascript"
-></script>
 {% endif %}
 {% endblock %}
