--- a/sass/site.scss
+++ b/sass/site.scss
@@ -1,6 +1,8 @@
 @import "/css/fonts.css";
 
-$font-stack: "Recursive", BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
+// $font-stack: "Recursive", BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
+$font-stack: "Recursive",-apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
+// $font-stack: "Recursive",-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 
 $link: hsl(0, 0%, 21%);
 $link-hover: hsl(204, 71%, 39%);
