--- a/templates/page.html
+++ b/templates/page.html
@@ -121,8 +121,8 @@
 <section class="section" style="padding-top: 0;">
   <div class="container">
     <div class="columns is-centered">
-      <div class="column">
-        <div id="hyvor-talk-view">
+      <div class="column is-8">
+        <div id="utteranc-view" >
           <script src="https://utteranc.es/client.js"
                   repo="t3link/t3link.github.io"
                   issue-number="{{ page.extra.issueId }}"
