--- a/templates/views.html
+++ b/templates/views.html
@@ -12,6 +12,7 @@
                 <ul class="timeline timeline-centered">
                     {% set section_item = get_section(path="archives/_index.md") %} 
                     {% for year, pages in section_item.pages | group_by(attribute="year") %}
+                    {% set_global outter = loop.index %}
                     <li class="timeline-item period">
                         <div class="timeline-info"></div>
                         <div class="timeline-marker"></div>
@@ -25,12 +26,21 @@
                             <p>
                                 <span>{{ month }}月共写了 {{ posts | length }} 篇文章 </span>
                             </p>
+                            {% set_global is_even_inner = (loop.index + outter) % 2 == 0 %}
                             {% for post in posts %}
                             <p>
+                                {% if is_even_inner %}
                                 <span>{{ post.date | date(format="%m-%d") }} </span>
                                 <span>
                                     <a href="{{ post.permalink }}" title="{{ post.title }}">{{ post.title }}</a>
                                 </span>
+                                {% else %}
+                                <span>
+                                    <a href="{{ post.permalink }}" title="{{ post.title }}">{{ post.title }} </a>
+                                </span>
+                                <span>{{ post.date | date(format="%m-%d") }}</span>
+                                {% endif %}
+
                             </p>
                             {% endfor %}
                         </div>
