feat: 去掉 categories 模版，引入其他 taxonomies 模版

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -121,11 +121,11 @@ ol > li::marker {
 
 .icon {
   vertical-align: middle;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
 }
 
-.columns .is-multiline .icon {
-  margin-bottom: 3px;
+.columns .icon {
+  margin-bottom: 2px;
 }
 
 section {
