--- a/templates/section.html
+++ b/templates/section.html
@@ -57,20 +57,12 @@
               阅读更多<span class="icon">
                 <i class="fas fa-arrow-circle-right"></i>
               </span>
-              <!-- <span class="icon is-small">
-                <i class="fas fa-arrow-right fa-xs"></i>
-              </span> -->
             </a>
           </div>
           <div class="columns">
-            <div class="column">
-              {% if page.taxonomies.categories %}
-              {{ macros::render_categories(categories=page.taxonomies.categories) }}
-              {% endif %}
-            </div>
             <div class="column has-text-right-desktop">
-              {% if page.taxonomies.tags %}
-              {{ macros::render_tags(tags=page.taxonomies.tags) }}
+              {% if page.taxonomies %}
+              {{ macros::render_taxonomies(taxonomies = page.taxonomies) }}
               {% endif %}
             </div>
           </div>
