--- a/templates/page.html
+++ b/templates/page.html
@@ -39,14 +39,9 @@
             {{ page.content | safe }}
           </div>
           <div class="columns is-multiline is-gapless">
-            <div class="column">
-              {% if page.taxonomies.categories %}
-              {{ macros::render_categories(categories=page.taxonomies.categories) }}
-              {% endif %}
-            </div>
             <div class="column has-text-right-desktop">
-              {% if page.taxonomies.tags %}
-              {{ macros::render_tags(tags=page.taxonomies.tags) }}
+              {% if page.taxonomies %}
+              {{ macros::render_taxonomies(taxonomies = page.taxonomies) }}
               {% endif %}
             </div>
           </div>
