--- a/templates/macros.html
+++ b/templates/macros.html
@@ -65,7 +65,7 @@
     <span class="icon">
       <i class="fas fa-pencil-alt"></i>
     </span>
-    {{ page.word_count }} words
+    {{ page.word_count }} 字
   </p>
 {% endmacro %}
 {% macro page_share_links(page) %}
