doc: search hint en keyword

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
     <div class="modal-content">
       <div class="field">
         <p class="control has-icons-right">
-          <input class="input" id="search" placeholder="当前仅支持英文搜索" type="search" />
+          <input class="input" id="search" placeholder="当前仅支持英语关键字搜索" type="search" />
           <span class="icon is-small is-right">
             <i class="fas fa-search"></i>
           </span>
