style: change page title margin-bottom

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -253,7 +253,15 @@ details summary::after {
 $anchor-color: #8ea2c3;
 
 .block:not(:last-child), .box:not(:last-child), .breadcrumb:not(:last-child), .content:not(:last-child), .highlight:not(:last-child), .level:not(:last-child), .message:not(:last-child), .notification:not(:last-child), .pagination:not(:last-child), .progress:not(:last-child), .subtitle:not(:last-child), .table-container:not(:last-child), .table:not(:last-child), .tabs:not(:last-child), .title:not(:last-child) {
-  margin-bottom: 1.0rem;
+  margin-bottom: 0.8rem;
+}
+
+h1.title.is-3 {
+  margin-bottom: 1.8rem;
+}
+
+.columns.is-gapless:not(:last-child) {
+  margin-bottom: 0.6rem;
 }
 
 .content h2 {
