--- a/sass/site.scss
+++ b/sass/site.scss
@@ -279,7 +279,7 @@ $anchor-color: #8ea2c3;
   margin-top: 0.2em;
 }
 
-.column.is-10.is-offset-1 {
+.columns .box {
   a.zola-anchor:hover {
     color: $anchor-color;
   }
