--- a/sass/site.scss
+++ b/sass/site.scss
@@ -252,10 +252,12 @@ details summary::after {
 
 $anchor-color: #8ea2c3;
 
-.column.is-11 {
-  .title {
-    margin-bottom: 0.8rem;
-  }
+.title {
+  margin-bottom: 0.8rem !important;
+  // padding-bottom: 0.8rem;
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
 }
 
 .columns.is-gapless:not(:last-child) {
