--- a/templates/views.html
+++ b/templates/views.html
@@ -30,7 +30,7 @@
                             <p>
                                 <span class="timeline-info-date">{{ post.date | date(format="%m-%d") }} </span>
                                 <span class="timeline-info-title">
-                                    <a href="{{ post.permalink }}" title="{{ post.title }}">{{ post.title }}</a>
+                                    <a href="{{ post.permalink }}">{{ post.title }}</a>
                                 </span>
                             </p>
                             {% endfor %}
