--- a/sass/site.scss
+++ b/sass/site.scss
@@ -1,30 +1,26 @@
 @import "/css/fonts.css";
 
-// $font-stack: "Recursive", BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
-$font-stack: "Recursive",
--apple-system,
-BlinkMacSystemFont,
-Helvetica Neue,
-PingFang SC,
-Microsoft YaHei,
-Source Han Sans SC,
-Noto Sans CJK SC,
-WenQuanYi Micro Hei,
-sans-serif;
+// $font-stack: "Recursive", BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-stack: "Recursive", -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
 // $font-stack: "Recursive",-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 
-$link      : hsl(0, 0%, 21%);
+$link: hsl(0, 0%, 21%);
 $link-hover: hsl(204, 71%, 39%);
 
-$read-more      : hsl(204, 71%, 39%);
+$read-more: hsl(204, 71%, 39%);
 $read-more-hover: hsl(348, 100%, 61%);
 
+::-webkit-scrollbar {
+  display: none; /* Chrome Safari */
+}
 
 body {
-  font          : 100% $font-stack;
-  display       : flex;
+  font: 100% $font-stack;
+  display: flex;
   flex-direction: column;
-  min-height    : 100vh;
+  min-height: 100vh;
+  scrollbar-width: none; /* firefox */
+  -ms-overflow-style: none; /* IE 10+ */
 }
 
 body[theme="dark"] {
@@ -36,70 +32,69 @@ body[theme="dark"] {
 }
 
 .section {
-  padding-top   : 1.5rem;
-  padding-right : 1.5rem;
+  padding-top: 1.5rem;
+  padding-right: 1.5rem;
   padding-bottom: 1.5rem;
-  padding-left  : 1.5rem;
+  padding-left: 1.5rem;
 }
 
 code {
-  line-height  : 136%;
-  padding      : 3px 5px;
+  line-height: 136%;
+  padding: 3px 5px;
   border-radius: 5px;
-  background   : #f8f5ec;
+  background: #f8f5ec;
 }
 
 .content pre {
   -webkit-overflow-scrolling: touch;
-  overflow-x                : auto;
-  padding                   : .85em .85em;
-  white-space               : pre;
-  word-wrap                 : normal;
-  border-radius             : 5px;
+  overflow-x: auto;
+  padding: 0.85em 0.85em;
+  white-space: pre;
+  word-wrap: normal;
+  border-radius: 5px;
 }
 
 pre,
 code {
-  font-size    : 90%;
-  overflow     : auto;
-  font-family  : Consolas, Monaco, Menlo, Consolas, monospace;
+  font-size: 90%;
+  overflow: auto;
+  font-family: Consolas, Monaco, Menlo, Consolas, monospace;
   margin-bottom: 0;
-  color        : #ef2020;
+  color: #ef2020;
 }
 
 .content {
-
   ol,
   ul {
     margin-left: 1.42em !important;
   }
 }
 
-ol>li::marker {
+ol > li::marker {
   font-weight: bold;
 }
 
 .content blockquote {
   background-color: #f5f5f5;
-  border-left     : 5px solid #dbdbdb;
-  padding         : 0.75em 1em;
-  font-family     : -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
+  border-left: 5px solid #dbdbdb;
+  padding: 0.75em 1em;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
 }
 
 .esa-catalog-title {
-  cursor       : move;
-  padding-left : 10px;
-  width        : 100%;
-  height       : 35px;
-  line-height  : 36px;
+  cursor: move;
+  padding-left: 10px;
+  width: 100%;
+  height: 35px;
+  line-height: 36px;
   border-bottom: 1px solid #eef2f8;
-  font-size    : 12px;
-  font-weight  : 600;
-  color        : #314659;
+  font-size: 12px;
+  font-weight: 600;
+  color: #314659;
 }
 
 .esa-catalog-title:before {
-  content     : '\2632';
+  content: "\2632";
   margin-right: 5px;
 }
 
@@ -109,37 +104,37 @@ ol>li::marker {
   }
 
   li ul {
-    border-left : 1px solid #dbdbdb;
-    margin      : .15em;
-    padding-left: .15em;
+    border-left: 1px solid #dbdbdb;
+    margin: 0.15em;
+    padding-left: 0.15em;
   }
 }
 
 .sub {
-  font-size     : 14px;
+  font-size: 14px;
   vertical-align: sub;
 }
 
 .back-to-top {
-  width   : 1.32rem;
-  height  : 1.32rem;
+  width: 1.32rem;
+  height: 1.32rem;
   position: fixed;
-  z-index : 999;
-  bottom  : 2.18666667rem;
-  right   : 0.53333333rem;
-  display : none;
+  z-index: 999;
+  bottom: 2.18666667rem;
+  right: 0.53333333rem;
+  display: none;
 
   img {
-    max-width     : 100%;
-    height        : auto;
-    display       : inline-block;
+    max-width: 100%;
+    height: auto;
+    display: inline-block;
     vertical-align: middle;
   }
 }
 
 .icon {
   vertical-align: middle;
-  margin-bottom : 5px;
+  margin-bottom: 5px;
 }
 
 .columns .icon {
@@ -181,13 +176,13 @@ $breakpoint-mobile: 768px;
 }
 
 .listing-group {
-  display            : block;
-  font-size          : 1.5em;
-  margin-block-start : 0.83em;
-  margin-block-end   : 0.13em;
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.13em;
   margin-inline-start: 0px;
-  margin-inline-end  : 0px;
-  font-weight        : bold;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 .listing {
@@ -195,30 +190,29 @@ $breakpoint-mobile: 768px;
 }
 
 .listing-item {
-  padding    : 3px 20px;
+  padding: 3px 20px;
   border-left: 1px dashed #cacaca;
-  transition : 0.2s ease-out;
+  transition: 0.2s ease-out;
 }
 
-.listing-item>.post-time {
+.listing-item > .post-time {
   margin-right: 0.83em;
-  color       : #8a8a8a;
+  color: #8a8a8a;
 }
 
 details {
-
   // Remove marker added by the display: list-item browser default
-  >summary {
+  > summary {
     list-style: none;
   }
 
   // Remove marker added by details polyfill
-  >summary::before {
+  > summary::before {
     display: none;
   }
 
   // Remove marker added by Chrome
-  >summary::-webkit-details-marker {
+  > summary::-webkit-details-marker {
     display: none;
   }
 
@@ -233,14 +227,14 @@ details summary {
 }
 
 details summary::after {
-  content        : "";
-  position       : absolute;
-  width          : 1em;
-  height         : 1em;
-  margin         : .2rem 0 0.5ch;
-  background     : url(/images/arrow-on.svg) no-repeat;
+  content: "";
+  position: absolute;
+  width: 1em;
+  height: 1em;
+  margin: 0.2rem 0 0.5ch;
+  background: url(/images/arrow-on.svg) no-repeat;
   background-size: 100% 100%;
-  transition     : transform .2s;
+  transition: transform 0.2s;
   transform: rotate(90deg);
 }
 
@@ -256,9 +250,9 @@ $anchor-color: #8ea2c3;
   .title {
     margin-bottom: 0rem !important;
     padding-bottom: 0.8rem;
-    overflow: hidden; 
-    text-overflow: ellipsis; 
-    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .title:hover {
@@ -266,7 +260,7 @@ $anchor-color: #8ea2c3;
     padding-bottom: 0.8rem;
     overflow: visible;
     text-overflow: inherit;
-    white-space: nowrap; 
+    white-space: nowrap;
   }
 }
 
@@ -309,22 +303,22 @@ $anchor-color: #8ea2c3;
   }
 
   .ch2:after {
-      counter-increment: ch2;
-      content: counter(ch2)" ";
-      color: $anchor-color;
-      vertical-align: sub;
-      font-size: 0.6em;
+    counter-increment: ch2;
+    content: counter(ch2) " ";
+    color: $anchor-color;
+    vertical-align: sub;
+    font-size: 0.6em;
   }
   .ch3:after {
-      counter-increment: ch3;
-      content: counter(ch2)"."counter(ch3)" ";
-      color: $anchor-color;
-      vertical-align: sub;
-      font-size: 0.6em;
+    counter-increment: ch3;
+    content: counter(ch2) "." counter(ch3) " ";
+    color: $anchor-color;
+    vertical-align: sub;
+    font-size: 0.6em;
   }
   .ch4:after {
     counter-increment: ch4;
-    content: counter(ch2)"."counter(ch3)"."counter(ch4)" ";
+    content: counter(ch2) "." counter(ch3) "." counter(ch4) " ";
     color: $anchor-color;
     vertical-align: sub;
     font-size: 0.6em;
