--- a/templates/tags/list.html
+++ b/templates/tags/list.html
@@ -16,15 +16,5 @@
 {% endblock %}
 
 {% block content %}
-<section class="section">
-  <div class="container">
-    {% for tag in terms %}
-    <span class="my-3 mx-2" style="display: inline-block;">
-      <a class="link" href="{{ get_taxonomy_url(kind="tags", name=tag.name) }}">
-        <span class="icon"><i class="fas fa-tag"></i></span>{{ tag.name }}<sup>{{ tag.pages | length }}</sup>
-      </a>
-    </span>
-    {% endfor %}
-  </div>
-</section>
+{{ macros::render_taxonomies_table(icon="fas fa-tag") }}
 {% endblock content %}
