style: update font awesome css

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
   <link rel="alternate icon" href="/icons/favicon.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" rel="stylesheet" />
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.6.1/themes/folio/galleria.folio.min.css" rel="stylesheet" /> -->
 
   <!-- <link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" /> -->
@@ -30,8 +31,8 @@
   </title>
 
   <!-- <script crossorigin="anonymous" src="/js/201b8d5e05.js"></script> -->
-  <script crossorigin="anonymous" src="/js/free.min.js"></script>
-  <script crossorigin="anonymous" src="/js/free-v4-shims.min.js"></script>
+  <!-- <script crossorigin="anonymous" src="/js/free.min.js"></script>
+  <script crossorigin="anonymous" src="/js/free-v4-shims.min.js"></script> -->
 
   {% if config.extra.analytics.google %}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ config.extra.analytics.google }}"></script>
