--- a/sass/timeline.scss
+++ b/sass/timeline.scss
@@ -58,7 +58,6 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
     font-weight: 700;
     letter-spacing: 3px;
     margin: 0 0 .5em 0;
-    text-transform: uppercase;
     white-space: nowrap;
 }
 /*----- TIMELINE MARKER -----*/
@@ -77,8 +76,7 @@ $primary-color-hover: scale-color($primary-color, $lightness: 32%);
         position: absolute;
         top: 3px; left: 0;
         width: 15px;
-        transition: background 0.3s ease-in-out,
-                border 0.3s ease-in-out;
+        transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
     }
     &:after {
         content: "";
